# paststack

./: README.md  git-z.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: publish-pypi.yml
create_fastapi_app/: cli.py  models.py  prompts.py
create_fastapi_app/templates/base/: .env.example  .gitignore  README.md  pyproject.toml
create_fastapi_app/templates/base/src/app/: __init__.py  database.py  main.py
create_fastapi_app/templates/base/src/app/api/: __init__.py  deps.py  router.py
create_fastapi_app/templates/base/src/app/api/routes/: __init__.py  health.py
create_fastapi_app/templates/base/src/app/core/: __init__.py  config.py
create_fastapi_app/templates/base/src/app/models/: __init__.py
create_fastapi_app/templates/base/src/app/schemas/: __init__.py
create_fastapi_app/templates/database/: postgres.py  sqlite.py
paststack/: __main__.py  banner.py  cli.py  combinations.py  models.py  prompts.py
paststack/templates/base/: .env.example  README.md  pyproject.toml
paststack/templates/base/src/app/: __init__.py  database.py  main.py
paststack/templates/base/src/app/api/: __init__.py  deps.py  router.py
paststack/templates/base/src/app/api/routes/: __init__.py  health.py
paststack/templates/base/src/app/core/: __init__.py  config.py
paststack/templates/base/src/app/models/: __init__.py
paststack/templates/base/src/app/schemas/: __init__.py
paststack/templates/database/postgres/: docker-compose.yml
paststack/templates/database/postgres/none/: database.py
paststack/templates/database/postgres/sqlmodel/: database.py
paststack/templates/database/postgres/sqlmodel/models/: __init__.py
paststack/templates/database/sqlite/none/: database.py
paststack/templates/database/sqlite/sqlmodel/: database.py
paststack/templates/database/sqlite/sqlmodel/api/: deps.py
paststack/templates/rate_limiting/src/app/core/: rate_limit.py
templates/minimal/: main.py  minimal_types.py
tests/: test_cli_generation.py
