[project]
name = "create-fastapi-app"
version = "0.1.0"
description = "Opinionated CLI to generate production-ready FastAPI boilerplate with typing and linting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "typer>=0.24.1",
]
[project.scripts]
create-fastapi-app = "create_fastapi_app.cli:main"

[tool.setuptools.packages.find]
include = ["create_fastapi_app*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
