[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paststack"
version = "0.1.0"
description = "Opinionated CLI to generate production-ready FastAPI boilerplate with typing and linting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.12.5",
    "questionary>=2.1.1",
    "rich>=13.0.0",
    "typer>=0.24.1",
]

[project.urls]
Repository = "https://github.com/initd-fr/paststack"

[project.scripts]
paststack = "paststack.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
paststack = [
    "templates/**/*",
    "templates/**/.env.example",
    "templates/**/.gitignore",
]

[tool.setuptools.packages.find]
include = ["paststack*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "ruff>=0.15.7",
]
