[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "FastAPI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
sqlite-none = ["aiosqlite>=0.20.0"]
sqlite-sqlmodel = [
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.22",
]
postgres-none = ["psycopg[binary]>=3.2.0"]
postgres-sqlmodel = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.22",
]
rate-limit = ["slowapi>=0.1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
